@@ -22,9 +22,13 @@ output.mime=image/png
 #########################################################################
 
 #report keys, list ALL prefab reports here!
-reports=traffic, bits, errors, discards, avgbusy5, freemem, \
+reports=traffic-inout, bits, errors, discards, avgbusy5, freemem, \
   bufferfails, kerneltasks, kernelmem, \
   cpuPercentBusy, \
+  foundry.actualTemp, foundry.cpuUtil1Min, foundry.dynMemUtil, \
+  hp.swbuffcorrupt, hp.swbufferfree, hp.swbufferinit, hp.swbuffermin, \
+  hp.swbuffermiss, hp.swbuffersize, hp.switchcpu, hp.swmemalloc, \
+  hp.swfreemem, hp.swtotalmem, \
   novell.numberOfNLMsLoaded, novell.openFiles, novell.licensedConnections, \
   memory, \
   novell.codeDataMemory, novell.cacheBuffers, \
@@ -40,7 +44,8 @@ reports=traffic, bits, errors, discards, avgbusy5, freemem, \
   sun.swap, sun.procs, sun.packets, sun.cpuTime, sun.interrupts, \
   sun.paging, sun.swapping, sun.diskxfer, \
   loadavg, cisco.protoin, cisco.protoout, cisco.pkts, cisco.temp, \
-  cisco.buffhits, cisco.buffmiss, apc.temp,\
+  cisco.buffhits, cisco.buffmiss, apc.temp, \
+  cisco.dropsin, cisco.dropsout, cisco.pixcpu, cisco.pixconinuse, cisco.pixconmaxused, \
   apc.vac, apc.percent, apc.time, \
   ups.Freq, ups.Volt, ups.Amp, ups.Watt, \
   juniper.cpu, juniper.temp, juniper.bufferPoolUtil, \
@@ -63,6 +68,24 @@ report.traffic.command=--title="Traffic Utilization" \
  GPRINT:percent:AVERAGE:" Avg  \\: %8.2lf %s" \
  GPRINT:percent:MIN:"Min  \\: %8.2lf %s" \
  GPRINT:percent:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.traffic-inout.name=InOut Traffic
+report.traffic-inout.columns=ifInOctets,ifOutOctets
+report.traffic-inout.type=interface
+report.traffic-inout.externalValues=ifSpeed
+report.traffic-inout.command=--title="In/Out Trafffic Utilization" \
+DEF:octIn={rrd1}:ifInOctets:AVERAGE \
+DEF:octOut={rrd2}:ifOutOctets:AVERAGE \
+CDEF:percentIn=octIn,8,*,{ifSpeed},/,100,* \
+CDEF:percentOut=octOut,8,*,{ifSpeed},/,100,* \
+LINE2:percentIn#0000ff:"In Utilization" \
+GPRINT:percentIn:AVERAGE:" Avg \\: %8.2lf %s" \
+GPRINT:percentIn:MIN:"Min \\: %8.2lf %s" \
+GPRINT:percentIn:MAX:"Max \\: %8.2lf %s\\n" \
+LINE2:percentOut#00ff00:"Out Utilization" \
+GPRINT:percentOut:AVERAGE:" Avg \\: %8.2lf %s" \
+GPRINT:percentOut:MIN:"Min \\: %8.2lf %s" \
+GPRINT:percentOut:MAX:"Max \\: %8.2lf %s\\n"
 
 report.bits.name=Bits In/Out
 report.bits.columns=ifInOctets,ifOutOctets
@@ -851,6 +874,57 @@ report.cisco.buffmiss.command=--title="Buffer Misses" \
  GPRINT:hgmiss:MIN:"Min  \\: %8.2lf %s" \
  GPRINT:hgmiss:MAX:"Max  \\: %8.2lf %s\\n"
 
+report.cisco.dropsin.name=Cisco Packets Dropped In
+report.cisco.dropsin.columns=locIfInQueueDrops
+report.cisco.dropsin.type=interface
+report.cisco.dropsin.command=--title="Cisco Packets Dropped In" \
+ DEF:dropin={rrd1}:locIfInQueueDrops:AVERAGE \
+ LINE2:dropin#0000ff:"Packets Dropped In" \
+ GPRINT:dropin:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:dropin:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:dropin:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.cisco.dropsout.name=Cisco Packets Dropped Out
+report.cisco.dropsout.columns=locIfOutQueueDrops
+report.cisco.dropsout.type=interface
+report.cisco.dropsout.command=--title="Cisco Packets Dropped Out" \
+ DEF:dropout={rrd1}:locIfOutQueueDrops:AVERAGE \
+ LINE2:dropout#0000ff:"Packets Dropped Out" \
+ GPRINT:dropout:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:dropout:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:dropout:MAX:"Max  \\: %8.2lf %s\\n"
+
+### Cisco Pix 515, possibly others as well #####
+
+report.cisco.pixcpu.name=CPU Pix (Cisco)
+report.cisco.pixcpu.columns=cpmCPUTotal5min
+report.cisco.pixcpu.type=node
+report.cisco.pixcpu.command=--title="Pix Cpu" \
+ DEF:cpupix={rrd1}:cpmCPUTotal5min:AVERAGE \
+ LINE2:cpupix#0000ff:"Pix Cpu" \
+ GPRINT:cpupix:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:cpupix:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:cpupix:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.cisco.pixconinuse.name=Pix In Use Connections
+report.cisco.pixconinuse.columns=cfwConnCurrInUse
+report.cisco.pixconinuse.type=node
+report.cisco.pixconinuse.command=--title="Pix In Use Connections" \
+ DEF:conpixinuse={rrd1}:cfwConnCurrInUse:AVERAGE \
+ LINE2:conpixinuse#0000ff:"Pix In Use Connections" \
+ GPRINT:conpixinuse:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:conpixinuse:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:conpixinuse:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.cisco.pixconmaxused.name=Pix Max Used Connections
+report.cisco.pixconmaxused.columns=cfwConnMaxUsed
+report.cisco.pixconmaxused.type=node
+report.cisco.pixconmaxused.command=--title="Pix Max Used Connections" \
+ DEF:conpixmaxused={rrd1}:cfwConnMaxUsed:AVERAGE \
+ LINE2:conpixmaxused#0000ff:"Pix Max Used Connections" \
+ GPRINT:conpixmaxused:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:conpixmaxused:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:conpixmaxused:MAX:"Max  \\: %8.2lf %s\\n"
 
 ##### Reports for APC UPSs
 
@@ -1023,6 +1097,143 @@ report.ethernet.ExcessiveCollision.command=--title="Ethernet Excessive Collision
  GPRINT:val1:AVERAGE:" Avg  \\: %8.2lf %s" \
  GPRINT:val1:MIN:"Min  \\: %8.2lf %s" \
  GPRINT:val1:MAX:"Max  \\: %8.2lf %s\\n" \
+
+###### Foundry specific reports ######
+
+report.foundry.actualTemp.name=Temperature
+report.foundry.actualTemp.columns=sbChAcTemperature
+report.foundry.actualTemp.type=node
+report.foundry.actualTemp.command=--title="Temperature" \
+ DEF:fdrtemp={rrd1}:sbChAcTemperature:AVERAGE \
+ CDEF:fdrtmp=fdrtemp,2,/ \
+ LINE2:fdrtmp#0000ff:"Degrees Celcius" \
+ GPRINT:fdrtmp:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:fdrtmp:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:fdrtmp:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.foundry.cpuUtil1Min.name=CpuUtil1Min
+report.foundry.cpuUtil1Min.columns=snAgGbCpu1MinAvg
+report.foundry.cpuUtil1Min.type=node
+report.foundry.cpuUtil1Min.command=--title="CpuUtil1Min" \
+ DEF:cpuUtil={rrd1}:snAgGbCpu1MinAvg:AVERAGE \
+ LINE2:cpuUtil#0000ff:"Percent Cpu Used" \
+ GPRINT:cpuUtil:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:cpuUtil:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:cpuUtil:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.foundry.dynMemUtil.name=MemoryUtil
+report.foundry.dynMemUtil.columns=snAgGblDynMemUtil
+report.foundry.dynMemUtil.type=node
+report.foundry.dynMemUtil.command=--title="MemoryUtil" \
+ DEF:memUtil={rrd1}:snAgGblDynMemUtil:AVERAGE \
+ LINE2:memUtil#0000ff:"Percent Memory Used" \
+ GPRINT:memUtil:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:memUtil:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:memUtil:MAX:"Max  \\: %8.2lf %s\\n"
+
+###### HP Procurve specific reports ######
+
+report.hp.swbuffcorrupt.name=BufferCorrupt (Hp Procurve)
+report.hp.swbuffcorrupt.columns=hpMsgBufCorrupt
+report.hp.swbuffcorrupt.type=node
+report.hp.swbuffcorrupt.command=--title="BuffersCorrupt" \
+ DEF:bufcorrupt={rrd1}:hpMsgBufCorrupt:AVERAGE \
+ LINE2:bufcorrupt#0000ff:"Buffers Corrupt" \
+ GPRINT:bufcorrupt:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:bufcorrupt:MIN:" Avg  \\: %8.2lf %s" \
+ GPRINT:bufcorrupt:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.hp.swbufferfree.name=BufferFree
+report.hp.swbufferfree.columns=hpMsgBufFree
+report.hp.swbufferfree.type=node
+report.hp.swbufferfree.command=--title="BuffersFree" \
+ DEF:buffree={rrd1}:hpMsgBufFree:AVERAGE \
+ LINE2:buffree#0000ff:"Buffers Free" \
+ GPRINT:buffree:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:buffree:MIN:" Avg  \\: %8.2lf %s" \
+ GPRINT:buffree:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.hp.swbufferinit.name=BufferInit
+report.hp.swbufferinit.columns=hpMsgBufInit
+report.hp.swbufferinit.type=node
+report.hp.swbufferinit.command=--title="BuffersInit" \
+ DEF:bufinit={rrd1}:hpMsgBufInit:AVERAGE \
+ LINE2:bufinit#0000ff:"Buffers Init" \
+ GPRINT:bufinit:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:bufinit:MIN:" Avg  \\: %8.2lf %s" \
+ GPRINT:bufinit::MAX:"Max  \\: %8.2lf %s\\n"
+
+report.hp.swbuffermin.name=BufferMin
+report.hp.swbuffermin.columns=hpMsgBufMin
+report.hp.swbuffermin.type=node
+report.hp.swbuffermin.command=--title="BufferMinimum" \
+ DEF:bufmin={rrd1}:hpMsgBufMin:AVERAGE \
+ LINE2:bufmin#0000ff:"Buffers Minimum" \
+ GPRINT:bufmin:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:bufmin:MIN:" Avg  \\: %8.2lf %s" \
+ GPRINT:bufmin:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.hp.swbuffermiss.name=BufferMiss
+report.hp.swbuffermiss.columns=hpMsgBufMiss
+report.hp.swbuffermiss.type=node
+report.hp.swbuffermiss.command=--title="BufferMisses" \
+ DEF:bufmiss={rrd1}:hpMsgBufMiss:AVERAGE \
+ LINE2:bufmiss#0000ff:"Buffer Misses" \
+ GPRINT:bufmiss:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:bufmiss:MIN:" Avg  \\: %8.2lf %s" \
+ GPRINT:bufmiss:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.hp.swbuffersize.name=BufferSize
+report.hp.swbuffersize.columns=hpMsgBufSize
+report.hp.swbuffersize.type=node
+report.hp.swbuffersize.command=--title="BufferSize" \
+ DEF:bufsize={rrd1}:hpMsgBufSize:AVERAGE \
+ LINE2:bufsize#0000ff:"Buffer Size" \
+ GPRINT:bufsize:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:bufsize:MIN:" Avg  \\: %8.2lf %s" \
+ GPRINT:bufsize:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.hp.switchcpu.name=CPU (Hp Procurve)
+report.hp.switchcpu.columns=hpSwitchCpuStat
+report.hp.switchcpu.type=node
+report.hp.switchcpu.command=--title="Cpu Util" \
+ DEF:cpuUtil={rrd1}:hpSwitchCpuStat:AVERAGE \
+ LINE2:cpuUtil#0000ff:"Cpu Util" \
+ GPRINT:cpuUtil:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:cpuUtil:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:cpuUtil:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.hp.swmemalloc.name=Allocated Memory
+report.hp.swmemalloc.columns=hpSwitchAllocMem
+report.hp.swmemalloc.type=hpSwitchAllocMem
+report.hp.swmemalloc.command=--title="Allocated Memory" \
+ DEF:memalloc={rrd1}:hpSwitchAllocMem:AVERAGE \
+ LINE2:memalloc#0000ff:"Allocated Memory" \
+ GPRINT:memalloc:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:memalloc:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:memalloc:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.hp.swfreemem.name=FreeMemory (Hp Procurve)
+report.hp.swfreemem.columns=hpSwitchFreeMem
+report.hp.swfreemem.type=node
+report.hp.swfreemem.command=--title="Mem Free" \
+ DEF:freeMem={rrd1}:hpSwitchFreeMem:AVERAGE \
+ CDEF:freeMB=freeMem,1024,/,1024,/ \
+ LINE2:freeMB#0000ff:"Free Memory (MBytes)" \
+ GPRINT:freeMB:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:freeMB:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:freeMB:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.hp.swtotalmem.name=TotalMemory  (Hp Procurve)
+report.hp.swtotalmem.columns=hpSwitchTotalMem
+report.hp.swtotalmem.type=node
+report.hp.swtotalmem.command=--title="Mem Used" \
+ DEF:ToMem={rrd1}:hpSwitchTotalMem:AVERAGE \
+ CDEF:TotMem=ToMem,1024,/,1024,/ \
+ LINE2:TotMem#0000ff:"Mem Used (MBytes)" \
+ GPRINT:TotMem:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:TotMem:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:TotMem:MAX:"Max  \\: %8.2lf %s\\n"
 
 report.printer.lifeCount.name=Total Pages Printed
 report.printer.lifeCount.columns=lifeCount
