@@ -1,5 +1,6 @@
 1.1.3 to 1.1.4
 ----------------------------------------------------------------------
+- Added some new standard performance reports. Thx Ted.
 
 
 1.1.2 to 1.1.3
